Fix wrong alignment

--- a/components/layout/ButtonLayout.module.css
+++ b/components/layout/ButtonLayout.module.css
@@ -15,5 +15,5 @@
 }
 
 .right {
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
